plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.draconist'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	//runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// JJWT (JSON Web Token)
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3' // JSON 처리

	// ✅ Jakarta Validation 추가
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	//s3 설정
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	//mariadb설정
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.3'

	//implementation 'mysql:mysql-connector-java:8.0.33'

	//jsoup 설정
	implementation 'org.jsoup:jsoup:1.16.2'

	implementation 'com.google.firebase:firebase-admin:6.8.1'
	// okhttp  
	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.2.2'

}


tasks.named('test') {
	useJUnitPlatform()
}

// JAR 파일의 MANIFEST.MF에 Main-Class 설정 추가
bootJar {
	mainClass ='com.draconist.goodluckynews.GoodluckynewsApplication'
}

jar {
	enabled = false // plain-jar 작업 비활성화
}
